# PaperQR

./: .gitignore  DownloadArxiv.py  QRAll.py  README.md  TODO  add-qr.py  main.py  pyproject.toml
QRArxiv/: QRAll.py
src/: main.py
tests/: main_test.py
