[project]
name = "PaperQR"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Albert Barba", email = "channalbert@gmail.com"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "GPL-3.0"}


[tool.pdm]
distribution = false

[tool.pytest.ini_options]
pythonpath="src"
#addopts = [
#    "--import-mode=importlib",
#]
